# llvm-practice

./: README.md  default.nix  flake.nix  justfile  meson.build
highlife/: main.c  meson.build
highlife/include/: draw-c.h  sdl-wrapper.hpp
highlife/ir/: highlife.ll
highlife/lib/: draw-c.cpp
ir-gen/: README.md  generation.cpp  ir.ll  meson.build
nix/: persystem.nix  treefmt.nix
paracl/: README.md  highlife.pcl  meson.build
paracl/ezvis/: meson.build
paracl/ezvis/test/: meson.build
paracl/include/: codegen.hpp
paracl/include/bytecode_vm/: bytecode_builder.hpp  decl_vm.hpp  disassembly.hpp  virtual_machine.hpp
paracl/include/frontend/: error.hpp  frontend_driver.hpp  scanner.hpp  source.hpp
paracl/include/frontend/analysis/: function_explorer.hpp  function_table.hpp  main_explorer.hpp  semantic_analyzer.hpp
paracl/include/frontend/ast/: ast_container.hpp  ast_copier.hpp  node_identifier.hpp
paracl/include/frontend/ast/ast_nodes/: assignment_statement.hpp  binary_expression.hpp  constant_expression.hpp  error_node.hpp  function_call.hpp  function_decl.hpp  i_ast_node.hpp  if_statement.hpp  print_statement.hpp  read_expression.hpp  return_statement.hpp  statement_block.hpp  subscript.hpp  unary_expression.hpp  variable_expression.hpp
paracl/include/frontend/types/: types.hpp
paracl/include/llvm_codegen/: codegen.hpp
paracl/include/utils/: algorithm.hpp  files.hpp  misc.hpp  transparent.hpp
paracl/src/: meson.build  pclc.cc  pcldis.cc  pclvm.cc
paracl/src/bytecode_vm/: decl_vm.cc  meson.build
paracl/src/frontend/: ast_copier.cc  dumper.cc  meson.build
paracl/src/frontend/analysis/: function_explorer.cc  semantic_analyzer.cc
paracl/src/frontend/parser/: parser.y
paracl/src/llvm_codegen/: codegen.cpp  meson.build
subprojects/: .gitignore
subprojects/graphs/: meson.build
subprojects/graphs/include/graphs/: dag.hpp  directed_graph.hpp
subprojects/graphs/test/: meson.build
subprojects/graphs/test/src/: directed_graph.cc
